tests/ui/transmutability/transmute-padding-ice.stderr
error[E0277]: `B` cannot be safely transmuted into `A`
  --> $DIR/transmute-padding-ice.rs:25:40
   |
LL |     assert::is_maybe_transmutable::<B, A>();
   |                                        ^ The size of `B` is smaller than the size of `A`
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/transmute-padding-ice.rs:10:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<
   |  ______________^
LL | |             Src,
LL | |             { Assume { alignment: true, lifetimes: true, safety: true, validity: true } },
LL | |         >,
   | |_________^ required by this bound in `is_maybe_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
